ELLE-350 | fix layout issues with query download button and other table header buttons, general code enhancements

--- a/ui/src/elle/components/styles/QueryDownloadButton.css
+++ b/ui/src/elle/components/styles/QueryDownloadButton.css
@@ -1,9 +1,3 @@
-.query-download-button-wrapper {
-  margin-bottom: 1em;
-  float: right;
-  margin-top: 0.7em;
-}
-
 .query-download-dialog {
   width: 300px;
 }
