--- a/ui/src/elle/components/table/styles/TableHeaderButtons.css
+++ b/ui/src/elle/components/table/styles/TableHeaderButtons.css
@@ -3,4 +3,8 @@
   align-items: center;
   margin-bottom: 1rem;
   margin-top: 1rem;
+
+  .right-component-wrapper {
+    padding-left: 5px;
+  }
 }
